Base64 in chunks
Signed-off-by: Jorge Bescos Gascon <jorge.bescos.gascon@oracle.com>